--- a/src/components/Footer/NewFooter.styles.css
+++ b/src/components/Footer/NewFooter.styles.css
@@ -3,17 +3,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 10px 20px;
-  /* height: 90px; */
-  height: 100%;
-  width: 100%;
+  height: 90px;
+  /* width: 100%; */
   background-color: #1960D3;
-}
-
-
-@media (max-width: 500px ) {
-  .links {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-  }
 }
