--- a/src/components/Navbar/NewNavbar.styles.css
+++ b/src/components/Navbar/NewNavbar.styles.css
@@ -4,7 +4,7 @@
   align-items: center;
   padding: 10px 20px;
   height: 90px;
-  width: 100%;
+  /* width: 100%; */
   background-color: #1960D3;
   z-index: 1;
 }
